--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -26,8 +26,8 @@
 
   .gridContainer > div {
     display: flex;
-    background-color: #00A0EB;
-    box-shadow: 0px 10px 16px rgba(84,0,0,0.06);
+    background-color: #00a0eb;
+    box-shadow: 0px 10px 16px rgba(84, 0, 0, 0.06);
     width: 330px;
     height: 305px;
     word-wrap: break-word;
@@ -42,7 +42,7 @@
 }
 
 .exploreSection {
-  background-color: #F2F4F8;
+  background-color: #f2f4f8;
   padding: 80px 0 80px 0;
 
   .propertySide {
@@ -65,7 +65,90 @@
     justify-content: center;
     flex-direction: column;
     gap: 20px;
+    width: 220px;
+    a {
+      text-decoration: none;
+      color: black;
+    }
+  }
+
+  .propertyTypeContainer:hover {
+    a {
+      text-decoration: underline;
+    }
   }
 }
 
+.agentSection {
+  height: 600px;
 
+  .agentCarousel {
+    margin-top: 20px;
+    width: 85%;
+  }
+  .agentCardContainer {
+    .agentCard {
+      gap: 19px;
+
+      .agentImg:hover {
+      }
+
+      .agentName:hover {
+        color: #00a0eb;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.newsLetterSection {
+  background-color: #004274;
+
+  .newsLetterImage {
+    background-image: url("https://preview.colorlib.com/theme/konato/assets/img/gallery/subscribe-img.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 50%;
+    height: 400px;
+    align-self: flex-end;
+  }
+
+  .newLetterFormContainer {
+    width: 50%;
+  }
+
+  .newLetterFormContainer > div {
+    word-wrap: break-word;
+    width: 50%;
+    padding-right: 50px;
+  }
+
+  form {
+    .newsLetterInput {
+      width: 100%;
+      background: inherit;
+      border: none;
+      border-bottom: 3px solid white;
+      caret-color: white;
+      color: white;
+      font-size: 14px;
+
+      &::placeholder {
+        color: white;
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .subscribeBtn {
+      background: #00aeff;
+      border: none;
+      border-radius: 4px;
+      padding: 10px;
+      color: white;
+      padding: 10px 30px;
+    }
+  }
+}
