--- a/src/pages/Property/Property.module.css
+++ b/src/pages/Property/Property.module.css
@@ -1,26 +1,25 @@
-.availablePropertyBanner {
-  background-image: url("https://preview.colorlib.com/theme/konato/assets/img/hero/h2_hero1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: 300px;
-
-  .bannerTextContainer {
-    color: white;
-    h1 {
-      font-weight: 700;
-    }
-    .bannerText {
-      font-weight: 600;
-      width: 500px;
-    }
-  }
+.parent {
+    width: 50%;
+    border: 1px solid black;
 }
 
-.propertyGrid {
+.propertyImg {
+    width: 100%;
+}
+
+.subHeading {
+  font-weight: bold;
+}
+
+.propertyConditionGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  row-gap: 40px;
+  row-gap: 20px;
+  column-gap: 40px;
+}
+
+.solid {
+    border-top: 3px dashed black;
+    width: 100%;
+    height: 5px;
 }
