--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -25,7 +25,9 @@
     text-decoration: none;
     padding: 4px;
     height: 100%;
+    border: none;
     border-radius: 5px;
+    background-color: inherit !important;
   }
 
   .show {
@@ -40,7 +42,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 5px;
     width: 240px;
 
     li {
