--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -9,24 +9,57 @@
   align-items: center;
   justify-content: center;
 
-  .formContainer {
-    background-color: white;
+  .right {
+    width: 100%;
+    min-height: 700px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .formContainer {
+    background-color: white;
     gap: 50px;
-    padding: 45px;
+    border-radius: 10px;
+    width: 400px;
 
     form {
-      width: 700px;
+      padding: 25px;
+      width: 100%;
+
+      .input {
+        input {
+          border: none;
+          border-radius: 0;
+          border-bottom: 1px solid grey;
+          outline: none;
+          background: none;
+        }
+        label {
+          border: none;
+          color: #00aeff;
+        }
+      }
+
+      button {
+        border: none;
+        border-bottom: 1px solid grey;
+        background-color: none;
+        background: none;
+      }
     }
     .loginBtn {
       background: #00aeff;
       padding: 10px 43px;
       color: white;
-      height: 60px;
       border: none;
+    }
+    .formBottom {
+      background-color: #f7f7f7;
+      padding: 20px;
+      border-radius: 0 0 10px 10px;
     }
   }
 }
