--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -9,7 +9,6 @@
   justify-content: center;
 
   .right {
-    width: 100%;
     min-height: 700px;
     height: auto;
     display: flex;
@@ -59,6 +58,16 @@
       background-color: #f7f7f7;
       padding: 20px;
       border-radius: 0 0 10px 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .right {
+    width: 300px;
+
+    .formContainer {
+      width: 300px;
     }
   }
 }
