--- a/src/components/Newsletter/Newsletter.module.css
+++ b/src/components/Newsletter/Newsletter.module.css
@@ -1,5 +1,5 @@
 .newsLetterSection {
-  background-color: #004274;
+  background-color: var(--darkBlue);
 
   .newsLetterImage {
     background-image: url("https://preview.colorlib.com/theme/konato/assets/img/gallery/subscribe-img.jpg");
@@ -40,7 +40,7 @@
     }
 
     .subscribeBtn {
-      background: #00aeff;
+      background: var(--lightBlue);
       border: none;
       border-radius: 4px;
       padding: 10px;
