--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -1,33 +1,89 @@
-
 .loginPage {
   background-image: url("https://preview.colorlib.com/theme/konato/assets/img/hero/h1_hero1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  .formContainer {
-    background-color: white;
+  .right {
+    min-height: 700px;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .formContainer {
+    background-color: white;
     gap: 50px;
-    padding: 45px;
+    border-radius: 10px;
+    width: 420px;
 
     form {
-      width: 700px;
+      padding: 25px;
+      width: 100%;
+
+      .input {
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        input[type="number"],
+        input[type="tel"],
+        input[type="url"],
+        input[type="search"],
+        input[type="date"],
+        input[type="time"],
+        input[type="datetime-local"],
+        input[type="month"] {
+          border: none;
+          border-radius: 0;
+          border-bottom: 1px solid grey;
+          outline: none;
+          background: none;
+        }
+        label {
+          border: none;
+          color: var(--lightBlue);
+        }
+      }
+
+      button {
+        border: none;
+        border-bottom: 1px solid grey;
+        background-color: none;
+        background: none;
+      }
+    }
+    .countryCode {
+      width: 32%;
+      option {
+        font-size: 14px;
+      }
     }
     .loginBtn {
-      background: #00aeff;
+      background: var(--lightBlue);
       padding: 10px 43px;
       color: white;
-      height: 60px;
       border: none;
+    }
+    .formBottom {
+      background-color: #f7f7f7;
+      padding: 20px;
+      border-radius: 0 0 10px 10px;
+    }
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .right {
+    width: 300px;
+
+    .formContainer {
+      width: 300px;
     }
   }
 }
