Property card update

--- a/src/components/PropertyCard/PropertyCard.module.css
+++ b/src/components/PropertyCard/PropertyCard.module.css
@@ -3,6 +3,7 @@
   object-fit: fill;
   object-position: center;
   image-rendering: optimizeSpeed;
+  transition: transform 0.3s;
 }
 
 .title {
@@ -10,4 +11,54 @@
   max-height: 25px;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.card {
+  width: 300px;
+  height: 320px;
+  overflow: hidden;
+
+  cursor: pointer;
+
+  &:hover .buttonContainer {
+    transform: translateY(0);
+    visibility: visible;
+  }
+
+  &:hover .image {
+    transform: scale(1.1);
+  }
+  .propertyInfo {
+    display: flex;
+    align-items: first baseline;
+    justify-content: flex-start;
+    flex-direction: column;
+
+    .propertyLocation,
+    .propertyArea {
+      margin-top: 5px;
+      display: inline-flex;
+      align-items: first baseline;
+      justify-content: flex-start;
+      gap: 5px;
+    }
+  }
+  .buttonContainer {
+    transition: transform 0.3s;
+    transform: translateY(150%);
+    width: 100%;
+
+    button {
+      background-color: var(--lightBlue);
+      padding: 3px 15px;
+      border: none;
+      border-radius: 20px;
+      color: white;
+      float: right;
+    }
+  }
+
+  .hidden {
+    visibility: hidden;
+  }
 }
