Update home page banner

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
   --darkBlue: #004274;
   --lightBlue: #008cf7;
-  --turcouise: #31d9c8;
+  --turcoise: #31d9c8;
   --magenta: #bf3bc1;
   --pink: #ff5cd1;
 }
