--- a/src/pages/Requests/Requests.module.css
+++ b/src/pages/Requests/Requests.module.css
@@ -1,30 +1,51 @@
-.tableContainer {
-  table {
-    border-collapse: collapse;
-    width: 100%;
+.parent {
+  .featureContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .feature {
+      width: 200px;
+      padding: 5px 0 0 5px;
+      border: 2px solid black;
+      height: 70px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
+      .featureNumber {
+        font-size: 25px;
+      }
+    }
   }
+  .tableContainer {
+    margin-top: 50px;
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
 
-  th,
-  td {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
 
-  th {
-    background-color: #f2f2f2;
-  }
+    th {
+      background-color: #f2f2f2;
+    }
 
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
 
-  button {
-    padding: 5px 10px;
-    margin-right: 5px;
-    cursor: pointer;
-  }
+    button {
+      padding: 5px 10px;
+      margin-right: 5px;
+      cursor: pointer;
+    }
 
-  button:last-child {
-    margin-right: 0;
+    button:last-child {
+      margin-right: 0;
+    }
   }
 }
