--- a/src/pages/Requests/Requests.module.css
+++ b/src/pages/Requests/Requests.module.css
@@ -17,8 +17,30 @@
       }
     }
   }
+  .filterContainer {
+    border: 1px solid grey;
+    padding: 10px;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    div {
+      display: flex;
+      align-items: start;
+      flex-direction: column;
+      p {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      select {
+        width: 100%;
+        min-width: 300px;
+        padding: 3px;
+      }
+    }
+  }
   .tableContainer {
-    margin-top: 50px;
+    margin-top: 10px;
     table {
       border-collapse: collapse;
       width: 100%;
