--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,6 +7,25 @@
 .navbar {
   background: var(--darkBlue);
   font-weight: 500;
+
+  .dropdownToggle {
+    background-color: inherit;
+  }
+
+  .usericon {
+    border-radius: 100%;
+    border: 1px solid white;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 5px;
+  }
+  .usericon:hover {
+    border-color: var(--lightBlue);
+    color: var(--lightBlue);
+  }
 }
 
 .dropdown {
