--- a/src/pages/Property/Property.module.css
+++ b/src/pages/Property/Property.module.css
@@ -1,10 +1,10 @@
 .parent {
-    width: 50%;
-    border: 1px solid black;
+  width: 50%;
+  border: 1px solid black;
 }
 
 .propertyImg {
-    width: 100%;
+  width: 100%;
 }
 
 .subHeading {
@@ -19,7 +19,15 @@
 }
 
 .solid {
-    border-top: 3px dashed black;
-    width: 100%;
-    height: 5px;
+  border-top: 3px dashed black;
+  width: 100%;
+  height: 5px;
+}
+
+.contactContainer {
+  border: 1px solid grey;
+  border-left: 5px solid var(--lightBlue);
+  border-radius: 5px;
+  padding: 20px;
+  width: 30%;
 }
