Added Pagination to tables

--- a/src/pages/Requests/Requests.module.css
+++ b/src/pages/Requests/Requests.module.css
@@ -68,5 +68,9 @@
     button:last-child {
       margin-right: 0;
     }
+    .paginationContainer {
+      float: right;
+      margin-top: 10px;
+    }
   }
 }
