--- a/src/pages/Requests/Requests.module.css
+++ b/src/pages/Requests/Requests.module.css
@@ -32,10 +32,14 @@
         font-size: 20px;
         font-weight: bold;
       }
-      select {
-        width: 100%;
+      select,
+      input {
+        min-width: 200px;
         padding: 3px;
       }
+    }
+    div:nth-child(3) > select {
+      width: 200px;
     }
   }
   .tableContainer {
