--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,21 @@
   --magenta: #bf3bc1;
   --pink: #ff5cd1;
 }
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
