--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -11,9 +11,20 @@
       font-size: 50px;
       line-height: 50px;
     }
-    input {
-      width: 100%;
-      padding: 10px;
+  }
+  .searchContainer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    .searchInput {
+      width: 30%;
+    }
+    button {
+      border-radius: 20px;
+      background-color: var(--lightBlue);
+      border: 0px;
     }
   }
 }
