--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -26,7 +26,7 @@
     justify-content: center;
     gap: 20px;
     .searchInput {
-      width: 30%;
+      width: 220px;
     }
     button {
       border-radius: 20px;
